src/app.css
@import 'tailwindcss';

@plugin '@tailwindcss/typography';

:root {
	--font-dmsans: 'DM Sans', sans-serif;
	--font-robotomono: 'Roboto Mono', monospace;

	--color-background: #131313;

	/* ==== Markdown ==== */

	code::before {
		content: '';
	}

	code {
		font-family: var(--font-robotomono);
		font-weight: 400;
		border-radius: 0.25rem;
		color: #f92672;
		padding: 0.2rem 0.375rem;
	}

	code::after {
		content: '';
	}

	blockquote {
		> p::before {
			content: '';
		}

		p {
			font-style: normal;
		}

		> p::after {
			content: '';
		}
	}
}

@theme {
	--breakpoint-2xs: 320px;
	--breakpoint-xs: 480px;

	--font-dmsans: var(--font-dmsans);
	--font-robotomono: var(--font-robotomono);

	--color-background: var(--color-background);
}

@layer components {
	html,
	body {
		@apply font-dmsans font-light text-white;
	}
}

.background {
	background: var(--color-background);
	background-image: url('/images/tile.svg');
	background-size: repeat;
	background-position: center top;
}

.bg-special-gradient {
	background:
		linear-gradient(to right top, rgba(57, 149, 255, 0.05), transparent), linear-gradient(to right bottom, rgba(115, 64, 255, 0.04), transparent),
		linear-gradient(to right bottom, rgba(35, 35, 35, 1) 0%, rgba(29, 29, 29, 1) 33%, rgba(22, 22, 22, 1) 100%);
}

/* ===== Scrollbar CSS ===== */
/* Firefox */
* {
	scrollbar-width: auto;
	scrollbar-color: #272727 var(--color-background);
}

/* Chrome, Edge, and Safari */
*::-webkit-scrollbar {
	width: 12px;
}

*::-webkit-scrollbar-track {
	background: var(--color-background);
}

*::-webkit-scrollbar-thumb {
	background-color: var(--color-secondary);
	border-radius: 20px;
	border: 2px solid #272727;
}

html {
	scroll-behavior: smooth;
}

